--- a/.gitignore
+++ b/.gitignore
@@ -14,10 +14,11 @@ target/
 .sts4-cache
 
 ### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
+# removed .idea from gitignore as I want to share settings on different machines.
+#**/.idea/workspace.xml
+#**/.idea/tasks.xml*.iws
+#*.iml
+#*.ipr
 
 ### NetBeans ###
 /nbproject/private/
@@ -31,3 +32,5 @@ build/
 
 ### VS Code ###
 .vscode/
+.idea/spring-boot-aws-microservice.iml
+.idea/workspace.xml
