added dockerfile and the spring-boot-maven-plugin for packaging the spring boot app and dockerizing it.

--- a/.gitignore
+++ b/.gitignore
@@ -14,11 +14,9 @@ target/
 .sts4-cache
 
 ### IntelliJ IDEA ###
-# removed .idea from gitignore as I want to share settings on different machines.
-#**/.idea/workspace.xml
-#**/.idea/tasks.xml*.iws
-#*.iml
-#*.ipr
+.idea
+*.iml
+*.ipr
 
 ### NetBeans ###
 /nbproject/private/
